--- a/JoomlaPVC.yml
+++ b/JoomlaPVC.yml
@@ -2,12 +2,13 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: joomla-pvc
+  annotations:
+    volume.beta.kubernetes.io/storage-class: aws-efs
   labels:
     env: joomlaVolume
 spec:
-  storageClassName: myclass
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
-      storage: 2Gi
+      storage: 10Gi
