--- a/mysqlPVC.yml
+++ b/mysqlPVC.yml
@@ -2,12 +2,13 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysqlpvc
+  annotations:
+    volume.beta.kubernetes.io/storage-class: aws-efs
   labels:
     env: mysqlVolume
 spec:
-  storageClassName: myclass
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests: 
-      storage: 2Gi
+      storage: 10Gi
