--- a/mysqlPod.yml
+++ b/mysqlPod.yml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysqldeploy
+  labels:
+    env: mysql-net
 spec:
   replicas: 1
   strategy:
